# python-veneto-web

./: .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 15cef7aeb964_init.py
python_veneto_web/: wsgi.py
python_veneto_web/apps/: common_envs.py  db.py  run.py
python_veneto_web/apps/news/: utils.py  views.py
python_veneto_web/apps/tutorial/: models.py  views.py
python_veneto_web/apps/window/: views.py
python_veneto_web/static/assets/css/: custom-css.css  templatemo-liberty-market.css  tutorial-custom-css.css
python_veneto_web/templates/news/: article.html  index.html
python_veneto_web/templates/setup/: layout.html
python_veneto_web/templates/setup/sections/: footer.html  header.html  scripts.html  stylesheet.html
python_veneto_web/templates/tutorial/: article.html  index.html  list.html
python_veneto_web/templates/window/: about_us.html  contact_us.html
python_veneto_web/templates/window/index/: index.html
python_veneto_web/templates/window/index/sections/: aboutus.html  categories.html  main.html  news.html
tests/apps/news/: test_utils.py
