[tool.poetry]
name = "python-veneto-web"
version = "0.1.0"
description = ""
authors = ["ShadMod <info@shadmod.it>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"
packages = [{ include = "python_veneto_web" }]

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "0.110.0"
uvicorn = { extras = ["standard"], version = "0.28.0" }
black = "24.3.0"
jinja2 = "3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "poetry run uvicorn python_veneto_web.apps.run:app --reload"
flake8 = "poetry run flake8 python_veneto_web"
black = "poetry run black python_veneto_web tests"
mypy = "poetry run mypy --config-file mypy.ini"
pytest = "poetry run pytest tests"
